# audio-helper

./: .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LISEZMOI.md  PAYSAGE.md  README.md  TRIGGERS.md  environment.yml  manual_poetry.sh  play.py  pyproject.toml  pyproject.toml.old  requirements-dev.txt  requirements.txt  requirements_to_toml.py  setup.py
.github/workflows/: ci.yml
assets/: landscape.csv  manual_poetry.sh  paysage.csv  requirements_to_toml.py
audio_helper/: __init__.py  api.py  cli_argparse.py  cli_click.py  from audio_helper import (.py  gui.py  main.py  mcp.py  streaming.py
skills/: README.md
skills/audio-helper/: SKILL.md
skills/audio-helper/references/: cli-reference.md  surfaces.md  triggers.md
tests/: __init__.py  test_api.py  test_audio_helper.py  test_cli.py  test_local.py  test_mcp.py  test_unit.py
