[tool.poetry]
name = "audio-helper"
version = "1.4.1"
description = "Audio Helper is a Python library that provides utility functions for processing audio files. It includes features like loading audio, converting formats, separating audio sources, and splitting and concatenating audio files."
authors = ["Warith HARCHAOUI <warithmetics@deraison.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
ffmpeg-python = "^0.2.0"
tqdm = "^4.67.1"
soundfile = "^0.13.0"
scipy = "^1.15.1"
numpy = ">=1.24"
os-helper = {git = "https://github.com/warith-harchaoui/os-helper.git", rev = "v1.2.0"}
torch = {version = "^2.5.1", optional = true}
torchaudio = {version = "^2.5.1", optional = true}
pytest = {version = "^8.0", optional = true}

[tool.poetry.extras]
demucs = ["torch", "torchaudio"]
dev = ["pytest", "torch", "torchaudio"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the network, ffmpeg, or load Demucs (skipped by default)",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
