[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-helper"
version = "1.4.2"
description = "Audio Helper — utility functions for processing audio files. Load audio, convert formats, separate audio sources (Demucs), split and concatenate audio. Shannon-correct resampling via ffmpeg/libswresample."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Warith HARCHAOUI", email = "warithmetics@deraison.ai"},
]
keywords = ["audio", "ffmpeg", "soundfile", "scipy", "demucs", "resampling", "pcm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "os-helper @ git+https://github.com/warith-harchaoui/os-helper.git@v1.3.0",
    "ffmpeg-python>=0.2.0,<0.3",
    "tqdm>=4.67.1,<5",
    "soundfile>=0.13.0,<1",
    "scipy>=1.15.1,<2",
    "numpy>=1.24",
]

[project.optional-dependencies]
demucs = ["torch>=2.5.1,<3", "torchaudio>=2.5.1,<3"]
# `dev` keeps the bar low for CI — pytest only. To run the integration
# suite (which exercises Demucs), install with `pip install -e .[dev,demucs]`.
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/warith-harchaoui/audio-helper"
Issues = "https://github.com/warith-harchaoui/audio-helper/issues"

[tool.setuptools.packages.find]
include = ["audio_helper*"]
exclude = ["tests*", "assets*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the network, ffmpeg, or load Demucs (skipped by default)",
]
addopts = "-m 'not integration'"
